--- a/HNSHOP/Views/AdminStats/Index.cshtml
+++ b/HNSHOP/Views/AdminStats/Index.cshtml
@@ -61,8 +61,8 @@
                 <li class="active">Thống kê sản phẩm</li>
             </ol>
         </div>
-        <h2 class="title text-center mb-5" style="color:#bc8e13;letter-spacing:.3px;">
-            <i class="fa fa-bar-chart"></i> Thống kê sản phẩm - Tổng <b style="color:#d09305">@ViewBag.TotalProducts</b> sản phẩm 
+        <h2 class="title text-center mb-5" style=";letter-spacing:.3px;">
+            <i class="fa fa-bar-chart"></i> Thống kê sản phẩm - Tổng <b >@ViewBag.TotalProducts</b> sản phẩm 
         </h2>
         <div class="row row-cols-1 row-cols-md-2">
 
