--- a/HNSHOP/Views/Notification/Index.cshtml
+++ b/HNSHOP/Views/Notification/Index.cshtml
@@ -101,7 +101,7 @@
     .noti-btn-read {
         border-radius: 18px;
         padding: 5px 20px;
-        font-size: 2rem;
+        font-size: 1.5rem;
         font-weight: 600;
         background: #ffcd61;
         color: #af7e00;
@@ -138,6 +138,30 @@
     }
 
     }
+
+    .noti-btn-delete {
+        border-radius: 16px;
+        padding: 6px 16px;
+        font-size: 1.25rem;
+        font-weight: 600;
+        background: #ffe7e7;
+        color: #b91d1d;
+        border: none;
+        margin-left: 14px;
+        transition: background .13s, color .13s;
+        float: right;
+    }
+
+        .noti-btn-delete:hover {
+            background: #f8b4b4;
+            color: #950707;
+        }
+
+    .noti-footer {
+        width: 100%;
+        justify-content: space-between;
+    }
+
 </style>
 
 <section id="cart_items">
@@ -155,6 +179,14 @@
                 </h2>
 
                 <div class="notification-bg p-md-4 p-2">
+                    @if (Model != null && Model.Count > 0)
+                    {
+                        <div class="text-right mb-2">
+                            <button id="deleteAllNotiBtn" class="btn btn-danger" style="font-size:1.09rem;">
+                                <i class="fa fa-trash"></i> Xóa tất cả thông báo
+                            </button>
+                        </div>
+                    }
                     <div class="noti-list">
                         @if (Model == null || Model.Count == 0)
                         {
@@ -185,9 +217,12 @@
                                             }
                                             else
                                             {
-                                                <span class="noti-badge-read">
-                                                    <i class="fa fa-check"></i> Đã đọc
-                                                </span>
+                                                
+                                               
+                                                <button class="noti-btn-delete" data-id="@item.Id" title="Xóa thông báo">
+                                                    <i class="fa fa-trash"></i>
+                                                </button>
+
                                             }
                                         </div>
                                     </div>
@@ -195,23 +230,56 @@
                             }
                         }
                     </div>
+                   
+
                 </div>
+                
             </div>
+           
         </div>
         <br />
     </div>
 </section>
 @section Scripts {
     <script>
-        $(document).ready(function () {
+        
+                $(document).ready(function () {
             $('.mark-read-btn').click(function () {
                 const btn = $(this);
                 const id = btn.data('id');
                 $.post('/Notification/MarkAsRead', { notificationId: id }, function () {
                     btn.replaceWith('<span class="noti-badge-read"><i class="fa fa-check"></i> Đã đọc</span>');
                     $('#notification-' + id).removeClass('unread');
+
+                    var $badge = $('.fa-bell').siblings('.badge, .badge-danger');
+                    if ($badge.length) {
+                        var num = parseInt($badge.text());
+                        if (num > 1) $badge.text(num - 1);
+                        else $badge.remove();
+                    }
                 });
             });
         });
+
+                $(document).on("click", ".noti-btn-delete", function () {
+            const btn = $(this);
+            const id = btn.data("id");
+            if (confirm("Bạn có chắc muốn xóa thông báo này?")) {
+                $.post('/Notification/Delete', { notificationId: id }, function () {
+                    $('#notification-' + id).fadeOut(250, function () { $(this).remove(); });
+                });
+            }
+        });
+
+          $(document).on("click", "#deleteAllNotiBtn", function () {
+            if (!confirm("Bạn có chắc muốn xóa tất cả thông báo?")) return;
+            $.post('/Notification/DeleteAll', function () {
+                $(".noti-list").fadeOut(200, function() { $(this).empty().show(); });
+                var $badge = $('.fa-bell').siblings('.badge, .badge-danger');
+                if ($badge.length) $badge.remove();
+            });
+        });
+
+
     </script>
 }
