--- a/HNSHOP/Views/Cart/Index.cshtml
+++ b/HNSHOP/Views/Cart/Index.cshtml
@@ -9,7 +9,7 @@
     <div class="container" id="cart-container">
         <div class="breadcrumbs">
             <ol class="breadcrumb">
-                <li><a href="#">Trang Chủ</a></li>
+                <li><a asp-controller="Home" asp-action="Index">Home</a></li>
                 <li class="active">Giỏ Hàng</li>
             </ol>
         </div>
