--- a/HNSHOP/Views/Customers/Index.cshtml
+++ b/HNSHOP/Views/Customers/Index.cshtml
@@ -74,9 +74,9 @@
                                 <a asp-controller="Accounts" asp-action="Index" asp-route-id="@customer.AccountId" class="btn btn-info btn-sm">
                                 <i class="fa fa-user"></i> Xem
                             </a>
-                            <button class="btn btn-danger btn-sm delete-customer" data-id="@customer.Id">
-                                <i class="fa fa-trash"></i> Xóa
-                            </button>
+                            @* <button class="btn btn-danger btn-sm delete-customer" data-id="@customer.Id"> *@
+                            @*     <i class="fa fa-trash"></i> Xóa *@
+                            @* </button> *@
                         </td>
                     </tr>
                 }
