--- a/HNSHOP/Views/ProductType/Index.cshtml
+++ b/HNSHOP/Views/ProductType/Index.cshtml
@@ -33,7 +33,7 @@
                             </td>
                             <td class="text-center">
                                 <button class="btn btn-warning btn-sm edit-btn" data-id="@type.Id">Sửa</button>
-                                <button class="btn btn-danger btn-sm delete-btn" data-id="@type.Id">Xóa</button>
+                                @* <button class="btn btn-danger btn-sm delete-btn" data-id="@type.Id">Xóa</button> *@
                             </td>
                         </tr>
                     }
