--- a/HNSHOP/Views/Ratings/Create.cshtml
+++ b/HNSHOP/Views/Ratings/Create.cshtml
@@ -42,7 +42,8 @@
         <div class="breadcrumbs">
             <ol class="breadcrumb">
                 <li><a asp-controller="Home" asp-action="Index">Home</a></li>
-                <li class="active">Thông Tin Tài Khoản</li>
+                <li><a asp-controller="Order" asp-action="Index">Đơn hàng</a></li>
+                <li class="active">Đánh giá sản phẩm</li>
             </ol>
         </div>
         <h2 class="text-center title">Đánh giá đơn hàng #@Model.OrderId - @Model.Shop.Name</h2>
