--- a/HNSHOP/Views/SaleEvent/Details.cshtml
+++ b/HNSHOP/Views/SaleEvent/Details.cshtml
@@ -182,7 +182,7 @@
         <div class="breadcrumbs">
             <ol class="breadcrumb">
                 <li><a asp-controller="Home" asp-action="Index">Home</a></li>
-                <li><a asp-controller="SaleEvent" asp-action="Index">Quản Lý Giảm Giá</a></li>
+                @* <li><a asp-controller="SaleEvent" asp-action="Index">Quản Lý Giảm Giá</a></li> *@
                 <li class="active">Chi Tiết Chương Trình Giảm Giá</li>
             </ol>
         </div>
