--- a/HNSHOP/Views/ShopOrders/SubOrderDetails.cshtml
+++ b/HNSHOP/Views/ShopOrders/SubOrderDetails.cshtml
@@ -20,6 +20,7 @@
     <div class="container">
         <div class="breadcrumbs">
             <ol class="breadcrumb">
+                <li><a asp-controller="Home" asp-action="Index">Home</a></li>
                 <li><a asp-controller="ShopOrders" asp-action="Index">Quản lý đơn hàng</a></li>
                 <li class="active">Chi tiết đơn shop</li>
             </ol>
