--- a/HNSHOP/Views/Orders/Details.cshtml
+++ b/HNSHOP/Views/Orders/Details.cshtml
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="breadcrumbs">
             <ol class="breadcrumb">
-                <li><a asp-controller="Home" asp-action="Index">Trang chủ</a></li>
+                <li><a asp-controller="Home" asp-action="Index">Home</a></li>
                 <li><a asp-controller="Orders" asp-action="Index">Đơn hàng của tôi</a></li>
                 <li class="active">Chi tiết đơn hàng</li>
             </ol>
